--- a/two/index.html
+++ b/two/index.html
@@ -5,11 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Perfume</title>
     <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="C:\Users\jjong\Documents\publishing\reset.css" />
   </head>
   <body>
     <div class="main">
       <section class="left">
-        <img src="./img/perfume.png" alt="" />
+        <picture>
+          <source media="(min-width: 600px)" srcset="" />
+          <img src="./img/perfume.png" alt="" />
+        </picture>
       </section>
 
       <section class="right">
